[package]
name = "Carb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
argon2 = "0.5"
rand = "0.8"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_Threading",
] }
wgpu = "0.19"
pollster = "0.3"

[build-dependencies]
embed-resource = "2.4"
